# sqlite-amalgamation-cmake

./: .gitignore  CMakeLists.txt  README.md
cmake/: Utilities.cmake  sqlite-config.cmake.in
